tests/codegen-anf/pass/019-preinc-float.hyg
let mutable x = 3.2f;
let y = ++ x;

assert(y - 4.2f < 0.000001f);
assert(x - 4.2f < 0.000001f)
